# homelab

./: .env.development  .env.example  .gitignore  .prettierignore  .prettierrc.json  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.husky/: pre-commit
docker/: update_container.py
docker/actual-budget/: compose.yaml
docker/adguard-home/: compose.yaml
docker/adguard-home-sync/: compose.yaml  config.yaml
docker/bazarr/: compose.yaml
docker/bazarr-anime/: compose.yaml
docker/bentopdf/: compose.yaml
docker/beszel/: compose.yaml
docker/beszel-agent/: compose.yaml
docker/caddy/: Caddyfile  compose.yaml
docker/change-detection/: compose.yaml
docker/cloudflared/: compose.yaml
docker/code-server/: compose.yaml
docker/dozzle/: compose.yaml
docker/dozzle-agent/: compose.yaml
docker/emilia/: compose.yaml
docker/feishin/: compose.yaml
docker/fireshare/: compose.yaml
docker/flaresolverr/: compose.yaml
docker/frigate/: compose.yaml
docker/github-runner/: compose.yaml
docker/homepage/: compose.yaml
docker/immich/: compose.yaml
docker/it-tools/: compose.yaml
docker/jdownloader2/: compose.yaml
docker/jellyfin/: compose.yaml  patch.sh
docker/jellyseerr/: compose.yaml
docker/jellystat/: compose.yaml
docker/kavita/: compose.yaml
docker/komga/: compose.yaml
docker/librenms/: compose.yaml
docker/lidarr/: compose.yaml
docker/metube/: compose.yaml  config.json
docker/mhddos/: compose.yaml
script/: docker.py  doh_blacklist.py  failover.py  shutdown.py
scripts/: docker.py  failover.py  shutdown.py
(+110 files in other folders)
