[project]
name = "homelab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10.4",
  "python-dotenv>=1.0.1",
  "qbittorrent-api>=2024.12.71",
  "uptime-kuma-api>=1.2.1"
]

[dependency-groups]
dev = ["mypy>=1.14.1", "ruff>=0.8.6"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "uptime_kuma_api.*"
ignore_missing_imports = true
