[project]
name = "homelab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.13.4",
  "js2py>=0.74",
  "pydantic>=2.10.4",
  "python-dotenv>=1.0.1",
  "qbittorrent-api>=2024.12.71",
  "uptime-kuma-api>=1.2.1"
]

[dependency-groups]
dev = ["mypy>=1.14.1", "ruff>=0.8.6", "types-requests>=2.32.0.20250328"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["I"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["uptime_kuma_api", "js2py"]
ignore_missing_imports = true
